Add police and fire chiefs images to Alberta page
Added PolChief.png and FireChief.png images for Alberta police and fire chiefs associations. Updated AB-2.html to display these images and revised the layout to include new columns for these organizations. Also added comments for Calgary and Edmonton CMA regions.

--- a/CAN/Provinces/AB-2.html
+++ b/CAN/Provinces/AB-2.html
@@ -65,8 +65,14 @@
 			<img src="AB/Corrections.png" height="200"><br>Alberta Correctional<br>Services</a><br>
 		</div>
 		
-		<div class="column2">
-			<img src="AB/PO/PEACEBADGE.png" height="200"><br>Alberta Peace Officers</a><br>
+		<div class="column">
+			<img src="AB/PolChief.png" height="200"><br>Alberta Association of Chiefs of Police</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/PO/PEACEBADGE.png" height="200"><br>Alberta Association of Community Peace Officers</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/FireChief.png" height="200"><br>Alberta Fire Chiefs Association</a><br>
 		</div>
 	
 	</div>
@@ -105,6 +111,9 @@
 			<div class="column6">
 				<img src="AB/YYC/UofC.png" height="80"><br><br>
 			</div>	
+			
+			<!-- Calgary CMA - Calgary, Airdrie, RVC, Cochrane, Chestermere, Crossfield, Irricana, Beiseker... -->
+			<!-- "Metro Calgary" - FoothillsC, RVC, WheatlandC, Airdrie, Chestermere, Cochrane, Crossfield, Diamond Valley, High River, Irrican, Okotoks, Strathmore -->
 		</div>	
 
 		<div class="column2">
@@ -127,6 +136,8 @@
 			<div class="column6">
 				<img src="AB/PO/UofA.png" height="80"><br><br>
 			</div>	
+			
+			<!-- Edmonton CMA - Edmonton, StrathconaC, St Albert, ParklandC, Sprice Grove, Leduc, SturgeonC, Fort Sask, Stony Plain, Beaumont, Morinville, Devon, Gibbons, Calmar, Redwater, etc -->
 		</div>	
 		
 	</div>			
