Update agency pages and add tribal police images
Refactored Alberta and federal agency HTML files to use new image paths and added more detailed agency listings. Introduced new images for Alberta chiefs, fire chiefs, and tribal police services. Enhanced tribal police section in CAN/FED/Trb.html with additional agencies and context. Renamed and reorganized badge images for consistency.

--- a/CAN/FED/ECO/ENV.html
+++ b/CAN/FED/ECO/ENV.html
@@ -9,6 +9,9 @@
   <body>
 		<h1><img src="Environment/32b8610370.jpg" height="350"></h1>
 		<h2>Environment Canada Wildlife Enforcement</br>Application de la Loi sur la Faune</h2>
+		
+		<!-- Environmental enforcement officers enforce federal legislation that deals with different risks to the environment and its biodiversity.  -->
+		<p>Wildlife enforcement officers enforce Canadian wildlife legislation which protects plant and animal species in Canada including migratory birds.</p>
   
     <div class="row">
 
