--- a/CAN/FED/ECO/PARK.html
+++ b/CAN/FED/ECO/PARK.html
@@ -9,6 +9,10 @@
   <body>
 		<h1><img src="Parks/nature_conservation_wardens.jpg" height="300"></h1>
 		<h2>Parks Canada Park Warden</br>Garde de Parc de Canada</h2>
+		
+		<p>Park Wardens protect natural and cultural resources by conducting patrols of National Parks, National Historic sites and National Marine Conservation Areas.<br>
+		Since 2009, park wardens have specialized in law enforcement and are now part of Parks Canada's Law Enforcement Branch.
+		</p>
   
     <div class="row">
 
