--- a/CAN/FED/Trb.html
+++ b/CAN/FED/Trb.html
@@ -24,17 +24,11 @@
 	<div class="row">
 	
 		<div class="column"><a href="Trb/9fd968c0ac.jpg"><img src="Trb/9fd968c0ac.jpg" width="90%"></a><br>Rama Emergency Services</br></br></div>
-		 
-		<div class="column"><a href="Trb/AnishinabekON044.jpg"><img src="Trb/AnishinabekON044.jpg" width="90%"></a><br>Anishinabek Tribal Police</br></br></div>
-
-		<div class="column"><a href="Trb/CommunityRelationsWinner.jpg"><img src="Trb/CommunityRelationsWinner.jpg" width="90%"></a><br>Wikwemikong Tribal Police</br></br></div>
 
 	</div>
 	
-    <div class="row">
-
-		<div class="column"><a href="Trb/f92320124f.jpg"><img src="Trb/f92320124f.jpg" width="90%"></a><br>Stl'atl'imx Tribal Police Service</br></br></div>
-		 
+	<div class="row">
+ 
 		<div class="column"><a href="Trb/60840ca026.jpg"><img src="Trb/60840ca026.jpg" width="90%"></a><br>Mohawk Peacekeepers</br></br></div>
 
 		<div class="column"><a href="Trb/ffd05f21e4.jpg"><img src="Trb/ffd05f21e4.jpg" width="90%"></a><br>Mohawk Peacekeepers</br></br></div>
@@ -51,7 +45,14 @@
 
 	</div>
 	
-	<h3>BC Integrated First Nations Unit</h3>
+	<div class="row">
+			<img src="RCMP/BADGE.png" height="250">
+			<img src="Trb/BC-IFNU/24493_ifnu_car_logo_medium.jpg" height="250">
+			<img src="../Provinces/BC/Police/WVan.png" height="250">
+		<h3>Integrated First Nations Unit</h3>
+		<p>On February 08, 2008, after many years of relationship building initiatives, the Squamish Nation, Tsleil Waututh Nation, West Vancouver Police and the RCMP in North Vancouver & Squamish agreed to a new partnership creating the Integrated First Nations Unit (IFNU).</p>
+		<!-- https://westvanpolice.ca/serving-first-nations/ -->
+	</div>
 	<div class="row">
 	
 		<div class="column2"><a href="Trb/BC-IFNU/0329476b5b.jpg"><img src="Trb/BC-IFNU/0329476b5b.jpg" width="90%"></a><br></br></div>
@@ -60,11 +61,23 @@
 
 	</div>
 	
-	<div class="column0"><img src="Trb/Tsuutina/BADGE.png" width="250"><br><h3>Tsuu'tina Nation Police Service</h3></br></div>
-	<div class="row">
-		<div class="column0"><a href="Trb/Tsuutina/TsuuTinaAB017.jpg"><img src="Trb/Tsuutina/TsuuTinaAB017.jpg" height="400"></a><br></br></div>
-
+	<div class="column">
+		<img src="../Provinces/AB/Police/Trib/BloodTribe.png" width="250"><br>
+		<h3>Blood Tribe Police Service</h3></br>
 	</div>
+		
+	<div class="column">
+		<img src="../Provinces/AB/Police/Trib/Tsuu tina.png" width="250"><br>
+		<h3>Tsuu'tina Nation Police Service</h3></br>
+			<div class="column0"><a href="Trb/Tsuutina/TsuuTinaAB017.jpg"><img src="Trb/Tsuutina/TsuuTinaAB017.jpg" height="400"></a><br></br>
+		</div>
+	</div>	
+		
+	<div class="column">
+		<img src="../Provinces/AB/Police/Trib/Lakeshore.png" width="250"><br>
+		<h3>Lakeshore Regional Police Service</h3></br>
+	</div>
+	
 	<br></br>
 	<div class="row">
 		<div class="column0"><img src="Trb/Kativik/BADGE.png" width="250"><br><h3>Kativik Regional Police Service</h3></div>
@@ -79,5 +92,50 @@
 		<div class="column"><a href="Trb/Kativik/poste-police-kuujjuaq-nunavik.jpg"><img src="Trb/Kativik/poste-police-kuujjuaq-nunavik.jpg" width="90%"></a><br></br></div>
 
 	</div>
+	
+	<br></br>
+	<div class="row">
+		<div class="column2"><img src="../Provinces/ON/Tribal/Police/Anishinabek.png" width="250"><br>
+		<h3>Anishinabek Tribal Police</h3>
+			<div class="column0"><a href="Trb/AnishinabekON044.jpg"><img src="Trb/AnishinabekON044.jpg" height="400"></a><br>Anishinabek Tribal Police</br></br>
+			</div>
+		</div>
+	
+		
+	
+		<div class="column2"><img src="../Provinces/ON/Tribal/Police/Wikwemikong.png" width="250"><br>
+		<h3>Wikwemikong Tribal Police</h3>
+			<div class="column0"><a href="Trb/CommunityRelationsWinner.jpg"><img src=	"Trb/CommunityRelationsWinner.jpg" height="400"></a><br>Anishinabek Tribal Police</br></br>
+			</div>
+		</div>
+	</div>
+	
+	
+	<br></br>
+	<div class="row">
+	
+	<div class="column"><img src="../Provinces/ON/Tribal/Police/Nishnawbe Aski.png" width="250"><br>
+		<h3>Nishnawbe Aski Tribal Police</h3>
+	</div>
+	<div class="column"><img src="../Provinces/ON/Tribal/Police/Akwesasne Mohawk.png" width="250"><br>
+		<h3>Akwesasne Mohawk Tribal Police</h3>
+	</div>
+	
+	<div class="column"><img src="../Provinces/ON/Tribal/Police/Lac Seul.png" width="250"><br>
+		<h3>Lac Seul Tribal Police</h3>
+	</div>
+	
+	</div>
+	
+	<div class="row">
+		
+	<div class="column2">
+		<img src="../Provinces/BC/Tribal/Stlatlimx.png" width="250"><br>
+		<h3>Stl'atl'imx Tribal Police Service</h3></br>
+			<div class="column0"><a href="Trb/f92320124f.jpg"><img src="Trb/f92320124f.jpg" height="400"></a><br></br>
+		</div>
+	</div>
+		
+	
 </body>
 </html>
