--- a/CAN/Provinces/AB-2.html
+++ b/CAN/Provinces/AB-2.html
@@ -28,25 +28,25 @@
 	<div class="row">
 		 
 		<div class="column2">
-			<a href="AB/Sheriff.html"><img src="AB/Sheriff/BADGE2.png" height="200"><br>Alberta Sheriffs Branch</a><br><br>
+			<a href="AB/Sheriff.html"><img src="AB/!Province/Sheriff/BADGE2.png" height="200"><br>Alberta Sheriffs Branch</a><br><br>
 			<!-- <div class="column"> -->
-				<!-- <img src="AB/Sheriff/BADGE.png" height="80"><br><br> -->
+				<!-- <img src="AB/!Province/Sheriff/BADGE.png" height="80"><br><br> -->
 			<!-- </div> -->
 			<div class="column2">
-				<img src="AB/CVSE/BADGE2.png" height="80"><br><br>
+				<img src="AB/!Province/CVSE/BADGE2.png" height="80"><br><br>
 			</div>
 			<div class="column2">
-				<img src="AB/ENV/Wildlife/BADGE.png" height="80"><br><br>
+				<img src="AB/!Province/ENV/Wildlife/BADGE.png" height="80"><br><br>
 			</div>
 		</div>
 		
 		<div class="column2">
-			<a href="AB/AHS.html"><img src="AB/AHS/BADGE.png" height="200"><br>Alberta Health Services</a><br><br>
+			<a href="AB/AHS.html"><img src="AB/!Province/EMS/BADGE.png" height="200"><br>Alberta Health Services</a><br><br>
 			<div class="column2">
 				<img src="AB/PO/AHS/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column2">
-				<img src="AB/AHS/BADGE2.png" height="80"><br><br>
+				<img src="AB/!Province/EMS/BADGE2.png" height="80"><br><br>
 			</div>
 		</div>
 		
@@ -54,7 +54,7 @@
 	<div class="row">
 		
 		<div class="column2">
-			<img src="AB/ENV/Conservation/BADGE.png" height="200"><br>Alberta Conservation</a><br><br>
+			<img src="AB/!Province/ENV/Conservation/BADGE.png" height="200"><br>Alberta Conservation</a><br><br>
 		</div>
 		
 		<!-- <div class="column2"> -->
@@ -62,11 +62,17 @@
 		<!-- </div> -->
 	
 		<div class="column2">
-			<img src="AB/Corrections.png" height="200"><br>Alberta Correctional<br>Services</a><br>
+			<img src="AB/!Province/Corrections.png" height="200"><br>Alberta Correctional<br>Services</a><br>
 		</div>
 		
-		<div class="column2">
-			<img src="AB/PO/PEACEBADGE.png" height="200"><br>Alberta Peace Officers</a><br>
+		<div class="column">
+			<img src="AB/PolChief.png" height="200"><br>Alberta Association of Chiefs of Police</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/PO/PEACEBADGE.png" height="200"><br>Alberta Association of Community Peace Officers</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/FireChief.png" height="200"><br>Alberta Fire Chiefs Association</a><br>
 		</div>
 	
 	</div>
@@ -78,12 +84,12 @@
 	<div class="row">		
 		
 		<div class="column2">
-			<a href="AB/Calgary.html"><img src="AB/YYC/LOGO.png" height="150"><br>City of Calgary</a><br><br>
+			<a href="AB/Calgary.html"><img src="AB/Calgary/LOGO.png" height="150"><br>City of Calgary</a><br><br>
 			<div class="column6">
-				<img src="AB/YYC/CPS/BADGE.png" height="80"><br><br>
+				<img src="AB/Calgary/Police/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column6">
-				<img src="AB/YYC/CFD/BADGE.png" height="80"><br><br>
+				<img src="AB/Calgary/Fire/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
 				<img src="../Transport/Transit/CT/BADGE.png" height="80"><br><br>
@@ -92,28 +98,28 @@
 				<img src="../Transport/Air/YYC/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column6">
-				<img src="AB/YYC/BylawBADGE.png" height="80"><br><br>
+				<img src="AB/Calgary/BylawBADGE.png" height="80"><br><br>
 			<!-- Bylaw peace officer -->
 			</div>	
 			<!-- <div class="column6"> -->
-				<!-- <img src="AB/YYC/PeaceBADGE2.png" height="80"><br><br> -->
+				<!-- <img src="AB/Calgary/PeaceBADGE2.png" height="80"><br><br> -->
 			<!-- city/comuunity peace officer -->
 			<!-- </div>	 -->
 			<!-- <div class="column6"> -->
 			<!-- corporate security -->
 			<!-- </div>		 -->
 			<div class="column6">
-				<img src="AB/YYC/UofC.png" height="80"><br><br>
+				<img src="AB/Calgary/UofC.png" height="80"><br><br>
 			</div>	
 		</div>	
 
 		<div class="column2">
-			<a href="AB/Edmonton.html"><img src="AB/YEG/LOGO.png" height="150"><br>City of Edmonton</a><br><br>
+			<a href="AB/Edmonton.html"><img src="AB/Edmonton/LOGO.png" height="150"><br>City of Edmonton</a><br><br>
 			<div class="column6">
-				<img src="AB/YEG/EPS/BADGE.png" height="80"><br><br>
+				<img src="AB/Edmonton/Police/BADGE.png" height="80"><br><br>
 			</div>
 			<div class="column6">
-				<img src="AB/YEG/EFR/BADGE.png" height="80"><br><br>
+				<img src="AB/Edmonton/Fire/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
 				<img src="../Transport/Transit/ET/BADGE.png" height="80"><br><br>
@@ -122,7 +128,7 @@
 				<img src="../Transport/Air/YEG/BADGE.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
-				<img src="AB/YEG/PeaceBADGE1.png" height="80"><br><br>
+				<img src="AB/Edmonton/PeaceBADGE1.png" height="80"><br><br>
 			</div>	
 			<div class="column6">
 				<img src="AB/PO/UofA.png" height="80"><br><br>
@@ -163,7 +169,7 @@
 	<div class="row">
 		
 		<div class="column2">
-			<a href="AB/Airdrie.html"><img src="AB/Airdrie/LOGO2.png" height="150"><br>City of Airdrie</a><br><br>
+			<a href="AB/Airdrie.html"><img src="AB/Airdrie/LOGOt.png" height="150"><br>City of Airdrie</a><br><br>
 			<div class="column">
 				<img src="../FED/RCMP/BADGE.png" height="80"><br><br>
 			</div>
