--- a/CAN/Provinces/AB.html
+++ b/CAN/Provinces/AB.html
@@ -27,9 +27,9 @@
 		<h1>Provincial Agencies</h1>
 		 
 		<div class="column2">
-			<a href="AB/!Province/Sheriff.html"><img src="AB/Sheriff/BADGE2.png" height="150"><br>Alberta Sheriffs Branch</a><br><br>
+			<a href="AB/!Province/Sheriff.html"><img src="AB/!Province/Sheriff/BADGE2.png" height="150"><br>Alberta Sheriffs Branch</a><br><br>
 			<!-- <div class="column"> -->
-				<!-- <img src="AB/Sheriff/BADGE.png" height="80"><br><br> -->
+				<!-- <img src="AB/!Province/Sheriff/BADGE.png" height="80"><br><br> -->
 			<!-- </div> -->
 			<div class="column2">
 				<img src="AB/!Province/CVSE/BADGE2.png" height="80"><br><br>
@@ -60,6 +60,16 @@
 		<div class="column2">
 			<img src="AB/!Province/Corrections.png" height="150"><br>Alberta Correctional<br>Services</a><br>
 		</div>
+		
+		<div class="column">
+			<img src="AB/PolChief.png" height="150"><br>Alberta Association of Chiefs of Police</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/PO/PEACEBADGE.png" height="150"><br>Alberta Association of Community Peace Officers</a><br>
+		</div>
+		<div class="column">
+			<img src="AB/FireChief.png" height="150"><br>Alberta Fire Chiefs Association</a><br>
+		</div>
 	
 	</div>
 	
@@ -68,12 +78,12 @@
 	<div class="row">
 		
 		<div class="column2">
-			<a href="AB/Calgary.html"><img src="AB/YYC/LOGO.png" width="400"><br>City of Calgary</a><br><br>
+			<a href="AB/Calgary.html"><img src="AB/Calgary/LOGO.png" width="400"><br>City of Calgary</a><br><br>
 			<div class="column4">
-				<img src="AB/YYC/CPS/BADGE.png" height="100"><br><br>
+				<img src="AB/Calgary/Police/BADGE.png" height="100"><br><br>
 			</div>
 			<div class="column4">
-				<img src="AB/YYC/CFD/BADGE.png" height="100"><br><br>
+				<img src="AB/Calgary/Fire/BADGE.png" height="100"><br><br>
 			</div>	
 			<div class="column4">
 				<img src="../Transport/Transit/CT/BADGE.png" height="100"><br><br>
@@ -84,12 +94,12 @@
 		</div>	
 
 		<div class="column2">
-			<a href="AB/Edmonton.html"><img src="AB/YEG/LOGO.png" width="400"><br>City of Edmonton</a><br><br>
+			<a href="AB/Edmonton.html"><img src="AB/Edmonton/LOGO.png" width="400"><br>City of Edmonton</a><br><br>
 			<div class="column4">
-				<img src="AB/YEG/EPS/BADGE.png" height="100"><br><br>
+				<img src="AB/Edmonton/Police/BADGE.png" height="100"><br><br>
 			</div>
 			<div class="column4">
-				<img src="AB/YEG/EFR/BADGE.png" height="100"><br><br>
+				<img src="AB/Edmonton/Fire/BADGE.png" height="100"><br><br>
 			</div>	
 			<div class="column4">
 				<img src="../Transport/Transit/ET/BADGE.png" height="100"><br><br>
