--- a/CAN/Provinces/AB/Calgary.html
+++ b/CAN/Provinces/AB/Calgary.html
@@ -7,16 +7,16 @@
 	<p ALIGN=LEFT ><a href="../AB.html">BACK to Alberta</a></p>
   </head>
   <body>
-    <h1><img src="YYC/ARMS.png" height="300"></h1><h2>City of Calgary</h2>
+    <h1><img src="Calgary/ARMS.png" height="300"></h1><h2>City of Calgary</h2>
 
 	<div class="row">
 		 
 		 <div class="column">
-			<a href="CPS.html"><img src="YYC/CPS/BADGE.png" height="200"><br>Calgary Police Service</a></br></br>
+			<a href="CPS.html"><img src="Calgary/Police/BADGE.png" height="200"><br>Calgary Police Service</a></br></br>
 		</div>
 		
 		<div class="column">
-			<a href="CFD.html"><img src="YYC/CFD/BADGE.png" height="200"><br>Calgary Fire Department</a></br></br>
+			<a href="CFD.html"><img src="Calgary/Fire/BADGE.png" height="200"><br>Calgary Fire Department</a></br></br>
 		</div>
 		
 		<div class="column">
@@ -27,10 +27,10 @@
 			<a href="../../Transport/Air/YYC.html"><img src="../../Transport/Air/YYC/BADGE.png" height="200"><br>Calgary International Airport</a></br></br>
 		</div>
 		<div class="column">
-			<img src="YYC/BylawBADGE.png" height="200"><br>City of Calgary Bylaw</br></br>
+			<img src="Calgary/BylawBADGE.png" height="200"><br>City of Calgary Bylaw</br></br>
 		</div>
 		<div class="column">
-			<img src="YYC/UofC.png" height="200"><br>University of Calgary Campus Security</br></br>
+			<img src="Calgary/UofC.png" height="200"><br>University of Calgary Campus Security</br></br>
 		</div>	
 		
 	</div>
