--- a/CAN/Provinces/AB/Edmonton.html
+++ b/CAN/Provinces/AB/Edmonton.html
@@ -7,17 +7,38 @@
 	<div align="left"><a href="../AB.html">BACK to Alberta</a></div>
   </head>
   <body>
-    <h1><img src="YEG/ARMS.png" height="300"></h1><h2>City of Edmonton</h2>
+    <h1><img src="Edmonton/ARMS.png" height="300"></h1><h2>City of Edmonton</h2>
 
 	<div class="row">
 		 
-		 <div class="column">
-			<!-- <a href="YEG/EPS/"> --><img src="YEG/EPS/BADGE.png" height="200"><br>Edmonton Police Service</a><br><br>
+		<div class="column">
+			<img src="Edmonton/Police/BADGE.png" height="200"><br>Edmonton Police Service<br></br>
 		</div>
 		
 		<div class="column">
-			<!-- <a href="YEG/EFR/"> --><img src="YEG/EFR/BADGE.png" height="200"><br>Edmonton Fire Rescue</a><br><br>
+			<img src="Edmonton/Fire/BADGE.png" height="200"><br>Edmonton Fire Rescue<br></br>
+		</div>	
+		
+		<div class="column">
+			<img src="../../Transport/Transit/ET/BADGE.png" height="200"><br>Edmonton Transit Peace Officer<br></br>
+		</div>	
+		
+		<div class="column4">
+			<img src="../../Transport/Air/YEG/BADGE.png" height="200"><br>Edmonton International Airport Fire Service<br></br>
+		</div>	
+		
+		<div class="column4">
+			<img src="Edmonton/PeaceBADGE1.png" height="200"><br>Edmonton Community Standards Enforcement<br></br>
+		</div>	
+		
+		<div class="column4">
+			<img src="PO/UofA.png" height="200"><br>University of Alberta Protective Services<br></br>
+		</div>	
+		
+		<div class="column4">
+			<img src="Edmonton/NAIT.png" height="200"><br>NAIT Protective Services<br></br>
 		</div>
+		
 	</div>
 	
 </body>
